# MtaCoin_container

./: README.md
MTACoin2/: README
MTACoin2/SharedFile/: SharedFile.c  SharedFile.h
MTACoin2/configs/: mtacoin.conf
MTACoin2/miner/: CMakeCache.txt  CMakeLists.txt  Dockerfile.miner  Makefile  cmake_install.cmake  miner  miner.c
MTACoin2/server/: CMakeCache.txt  CMakeLists.txt  Dockerfile.server  Makefile  cmake_install.cmake  server  server.c
